// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render simple line 1`] = `
<g>
  <path
    d="M0,100L100,0"
    fill="none"
  />
</g>
`;

exports[`should use style and class 1`] = `
<g
  class="a"
  data-series="0"
>
  <path
    d="M0,100L100,0"
    fill="none"
    style="stroke: blue;"
  />
</g>
`;
